--- a/html/soporte.html
+++ b/html/soporte.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="../css/estilo.css">
 
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 </head>
 
@@ -41,6 +44,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="soporte.html">Soporte</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="Login.html" > <i class="fa-solid fa-user"></i>Cuenta </a>
+        </li>
         </ul>
 
       </div>
