--- a/html/Login.html
+++ b/html/Login.html
@@ -11,7 +11,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="stylesheet" href="../css/Login.css">
-    
+
     <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
      crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -61,7 +61,7 @@
             <input id="usuario" type="text" class="form-control" name="username" placeholder="Usuario">
             <input id="contraseña" type="password" class="form-control" name="password" placeholder="Contraseña">
             <br>
-            <button id="boton" class="boton">Iniciar Sesion </button>
+            <button id="boton" class="boton" onclick="login()">Iniciar Sesion </button>
         </div>
     </div>
 
@@ -71,7 +71,7 @@
 
 
 
-    <script src="../javascript/funciones.js"></script>
+    <script src="../javascript/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
