--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="icon" type="image/x-icon" href="Imagenes/logoSotoBurguer.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
-  integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,10 +58,30 @@
               Soporte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="html/Login.html" > <i class="fa-solid fa-user"></i> Cuenta </a>
-           
+            <a class="nav-link active" href="html/Login.html"> <i class="fa-solid fa-user"></i> Cuenta </a>
+
           </li>
         </ul>
+        <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+          id="abrirModal"><i class="fa-solid fa-user"></i> Iniciar Sesion</button>
+
+        <div id="ventanaModal" class="modal">
+          <div class="contenido-modal">
+            <span class="cerrar">&times;</span>
+            <div class="containerPrincipal">
+              <h1 class="h-1 ashe1">Inicio de sesión</h1>
+              <div class="form-group">
+                <input id="usuario" type="text" class="form-control" name="username" placeholder="Usuario">
+                <input id="contraseña" type="password" class="form-control" name="password" placeholder="Contraseña">
+                <br>
+                <button id="boton" class="boton" onclick="login()">Iniciar Sesion </button>
+                <br>
+                <a class="restContra" href="#">Olvidé mi contraseña</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
       </div>
     </div>
