--- a/html/Login.html
+++ b/html/Login.html
@@ -55,7 +55,7 @@
                   Soporte</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="html/Login.html" > <i class="fa-solid fa-user"></i> Cuenta </a>
+                <a class="nav-link active" href="Login.html" > <i class="fa-solid fa-user"></i> Cuenta </a>
                
               </li>
             </ul>
