--- a/html/Locales.html
+++ b/html/Locales.html
@@ -132,6 +132,7 @@
               Quieres ser el primero en enterarte de nustras nuevas hamburguesas y promos?
             </h6>
             <p>Suscríbete a nuestro Newsletter:</p>
+
             <form>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Ingrese su correo: </label>
@@ -139,8 +140,8 @@
                 <div id="emailHelp" class="form-text">Nunca compartiremos tu correo</div>
 
               </div>
-
             </form>
+
             <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
               id="abrirModal">Suscribirse</button>
 
@@ -151,8 +152,8 @@
                 <p>Correo registrado correctamente</p>
               </div>
             </div>
-          </div>
 
+          </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
@@ -163,13 +164,13 @@
               <a href="https://www.instagram.com/soto__burguers/" target="_blank" class="text-reset">Instagram</a>
             </p>
             <p>
-              <a href="" class="text-reset">Facebook</a>
+              <a href="#!" class="text-reset">Facebook</a>
             </p>
             <p>
-              <a href="" class="text-reset">Twitter</a>
+              <a href="#!" class="text-reset">Twitter</a>
             </p>
             <p>
-              <a href="" class="text-reset">Tik Tok</a>
+              <a href="#!" class="text-reset">Tik Tok</a>
             </p>
           </div>
 
@@ -190,11 +191,10 @@
 
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
       © 2023 Todos los derechos reservados:
-      <a class="text-reset fw-bold" href="../index.html">www.SotoBurguers.com</a>
+      <a class="text-reset fw-bold" href="index.html">www.SotoBurguers.com</a>
     </div>
 
   </footer>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
