--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -109,6 +109,7 @@
 
 
     <section class="container">
+      <br>
       <div class="container text-center text-md-start">
 
         <div class="row mt-3">
@@ -120,6 +121,7 @@
               Quieres ser el primero en enterarte de nustras nuevas hamburguesas y promos?
             </h6>
             <p>Suscríbete a nuestro Newsletter:</p>
+
             <form>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Ingrese su correo: </label>
@@ -127,8 +129,8 @@
                 <div id="emailHelp" class="form-text">Nunca compartiremos tu correo</div>
 
               </div>
-
             </form>
+
             <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
               id="abrirModal">Suscribirse</button>
 
@@ -139,8 +141,8 @@
                 <p>Correo registrado correctamente</p>
               </div>
             </div>
-          </div>
 
+          </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
@@ -151,13 +153,13 @@
               <a href="https://www.instagram.com/soto__burguers/" target="_blank" class="text-reset">Instagram</a>
             </p>
             <p>
-              <a href="" class="text-reset">Facebook</a>
+              <a href="#!" class="text-reset">Facebook</a>
             </p>
             <p>
-              <a href="" class="text-reset">Twitter</a>
+              <a href="#!" class="text-reset">Twitter</a>
             </p>
             <p>
-              <a href="" class="text-reset">Tik Tok</a>
+              <a href="#!" class="text-reset">Tik Tok</a>
             </p>
           </div>
 
@@ -178,7 +180,7 @@
 
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
       © 2023 Todos los derechos reservados:
-      <a class="text-reset fw-bold" href="../index.html">www.SotoBurguers.com</a>
+      <a class="text-reset fw-bold" href="index.html">www.SotoBurguers.com</a>
     </div>
 
   </footer>
