--- a/html/soporte.html
+++ b/html/soporte.html
@@ -134,10 +134,10 @@
 
 
   <br><br><br><br><br><br><br>
+  
   <footer>
-
-
     <section class="container">
+      <br>
       <div class="container text-center text-md-start">
 
         <div class="row mt-3">
@@ -149,6 +149,7 @@
               Quieres ser el primero en enterarte de nustras nuevas hamburguesas y promos?
             </h6>
             <p>Suscríbete a nuestro Newsletter:</p>
+
             <form>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Ingrese su correo: </label>
@@ -156,8 +157,8 @@
                 <div id="emailHelp" class="form-text">Nunca compartiremos tu correo</div>
 
               </div>
-
             </form>
+
             <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
               id="abrirModal">Suscribirse</button>
 
@@ -168,8 +169,8 @@
                 <p>Correo registrado correctamente</p>
               </div>
             </div>
-          </div>
 
+          </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
@@ -180,13 +181,13 @@
               <a href="https://www.instagram.com/soto__burguers/" target="_blank" class="text-reset">Instagram</a>
             </p>
             <p>
-              <a href="" class="text-reset">Facebook</a>
+              <a href="#!" class="text-reset">Facebook</a>
             </p>
             <p>
-              <a href="" class="text-reset">Twitter</a>
+              <a href="#!" class="text-reset">Twitter</a>
             </p>
             <p>
-              <a href="" class="text-reset">Tik Tok</a>
+              <a href="#!" class="text-reset">Tik Tok</a>
             </p>
           </div>
 
