--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="css/estilo.css">
+  
   <link rel="icon" type="image/x-icon" href="Imagenes/logoSotoBurguer.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -26,7 +27,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="#">
         <img src="Imagenes/logoSotoBurguer.png" alt="logo" width="120" height="76">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -62,27 +63,8 @@
 
           </li>
         </ul>
-        <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
-          id="abrirModal"><i class="fa-solid fa-user"></i> Iniciar Sesion</button>
-
-        <div id="ventanaModal" class="modal">
-          <div class="contenido-modal">
-            <span class="cerrar">&times;</span>
-            <div class="containerPrincipal">
-              <h1 class="h-1 ashe1">Inicio de sesión</h1>
-              <div class="form-group">
-                <input id="usuario" type="text" class="form-control" name="username" placeholder="Usuario">
-                <input id="contraseña" type="password" class="form-control" name="password" placeholder="Contraseña">
-                <br>
-                <button id="boton" class="boton" onclick="login()">Iniciar Sesion </button>
-                <br>
-                <a class="restContra" href="#">Olvidé mi contraseña</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
+        <button type="button" class="btn btn-warning" onclick="openLoginForm()"><i class="fa-solid fa-user"></i> Iniciar Sesion</button>
+        
       </div>
     </div>
   </nav>
@@ -162,7 +144,31 @@
     </div>
   </article>
 
-
+  <article>
+    <div class="popup-overlay"></div>
+        <div class="popup">
+          <div class="popup-close" onclick="closeLoginForm()">&times;</div>
+          <div class="form">
+            <div class="avatar">
+              <img src="" alt="">
+            </div>
+            <div class="header">
+              Member Login
+            </div>
+            <div class="element">
+              <label for="username">Username</label>
+              <input type="text" id="username">
+            </div>
+            <div class="element">
+              <label for="password">Password</label>
+              <input type="password" id="password">
+            </div>
+            <div class="element">
+              <button>Login</button>
+            </div>
+          </div>
+        </div>
+  </article>
 
 
   <br>
@@ -298,7 +304,7 @@
 
   </footer>
 
-
+  <script src="../javascript/login.js"></script>
   <script src="javascript/funciones.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
