--- a/html/soporte.html
+++ b/html/soporte.html
@@ -63,18 +63,19 @@
       </div>
     </div>
   </nav>
-  <br>
-  <br>
-  <br>
-  <br>
+ <br>
+ <br>
+ <br>
   <br>
 
-  <h1 class="titulo_soporte" > Soporte</h1>
 
-  <main class="container d-flex align-items-center justify-content-center">
 
+
+  <main class="formulario_a d-flex align-items-center justify-content-center">
+   
     <section>
-      <div class="container">
+      <div class="form-group">
+        <h1 class="titulo_soporte" > Soporte</h1>
         <form action="" id="formulario_contacto">
 
           <label for="nombre">Nombre</label>
@@ -129,11 +130,7 @@
         </form>
       </div>
     </section>
-
   </main>
-
-
-  <br><br><br><br><br><br><br>
   <footer>
 
 
