--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -10,15 +10,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
-<<<<<<< HEAD
+ 
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-=======
+
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
->>>>>>> 673b138dbf1f0aed7730232562489f4c6e9c616e
+
 
 </head>
 
@@ -75,7 +75,8 @@
     <div class="texto_encima">Nosotros</div>
   </div>
 
-
+  <br>
+  
 
   <main class="container-lg d-flex align-items-center justify-content-center">
 
@@ -93,10 +94,11 @@
       </div>
       <div class="col">
         <div class="card text-center">
-          <img src="../Imagenes/Trabaja_con_nosotros.jpg" class="card-img-top" alt="..." width="300" height="325">
+          <img src="../Imagenes/Trabaja_con_nosotros.jpg" class="card-img-top" alt="..." width="300" height="300">
           <div class="card-body">
             <h5 class="card-title">Trabaja con nosotros!!</h5>
-            <p class="card-text">Conoce nuestras areas de trabajo y postula para trabajar con nosotros.</p>
+            <p class="card-text">Conoce nuestras areas de trabajo y postula para trabajar con nosotros para expandir
+              los diversos platillos.</p>
           </div>
         </div>
       </div>
