--- a/index.html
+++ b/index.html
@@ -309,84 +309,85 @@
     </main>
 
     <br>
-
-    <footer>
-      <section class="container">
-        <br>
-        <div class="container text-center text-md-start">
-
-          <div class="row mt-3">
+      <footer>
 
 
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+    <section class="container">
+      <br>
+      <div class="container text-center text-md-start">
 
-              <h6 class="text-uppercase fw-bold mb-4">
-                Quieres ser el primero en enterarte de nustras nuevas hamburguesas y promos?
-              </h6>
-              <p>Suscríbete a nuestro Newsletter:</p>
+        <div class="row mt-3">
 
-              <form>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Ingrese su correo: </label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text">Nunca compartiremos tu correo</div>
 
-                </div>
-              </form>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
-              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
-                id="abrirModal">Suscribirse</button>
+            <h6 class="text-uppercase fw-bold mb-4">
+              Quieres ser el primero en enterarte de nustras nuevas hamburguesas y promos?
+            </h6>
+            <p>Suscríbete a nuestro Newsletter:</p>
 
-              <div id="ventanaModal" class="modal">
-                <div class="contenido-modal">
-                  <span class="cerrar">&times;</span>
-                  <h2 class="display-5">Soto Burguers</h2>
-                  <p>Correo registrado correctamente</p>
-                </div>
+            <form>
+              <div class="mb-3">
+                <label for="correo" class="form-label">Ingrese su correo:  </label>
+                <input type="email" class="form-control" id="correo" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Nunca compartiremos tu correo</div>
+                <input type="button" class="btn btn-warning" value="Suscribirse" onclick="validarCorreo(document.getElementById('correo').value)">
+
               </div>
+            </form>
 
-            </div>
-
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-              <h6 class="text-uppercase fw-bold mb-4">
-                Síguenos!
-              </h6>
-              <p>
-                <a href="https://www.instagram.com/soto__burguers/" target="_blank" class="text-reset">Instagram</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Facebook</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Twitter</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Tik Tok</a>
-              </p>
-            </div>
-
-
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-              <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
-              <p>Al. del Libertador Bernardo O'Higgins 108, Santiago, Región Metropolitana </p>
-              <p>sotoburguers@gmail.com</p>
-              <p> +569 40155266</p>
-              <p> +569 26192736 </p>
+            <div id="ventanaModal" class="modal">
+              <div class="contenido-modal">
+                <span class="cerrar">&times;</span>
+                <h2 class="display-5">Soto Burguers</h2>
+                <p>Correo registrado correctamente</p>
+              </div>
             </div>
 
           </div>
 
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+            <h6 class="text-uppercase fw-bold mb-4">
+              Síguenos!
+            </h6>
+            <p>
+              <a href="https://www.instagram.com/soto__burguers/" target="_blank" class="text-reset">Instagram</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Facebook</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Twitter</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Tik Tok</a>
+            </p>
+          </div>
+
+
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+            <p>Al. del Libertador Bernardo O'Higgins 108, Santiago, Región Metropolitana </p>
+            <p>sotoburguers@gmail.com</p>
+            <p> +569 40155266</p>
+            <p> +569 26192736 </p>
+          </div>
+
         </div>
-      </section>
 
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-        © 2023 Todos los derechos reservados:
-        <a class="text-reset fw-bold" href="index.html">www.SotoBurguers.com</a>
       </div>
+    </section>
 
-    </footer>
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+      © 2023 Todos los derechos reservados:
+      <a class="text-reset fw-bold" href="index.html">www.SotoBurguers.com</a>
+    </div>
+
+  </footer>
+
+
 
     <script src="../javascript/login.js"></script>
     <script src="javascript/funciones.js"></script>
