--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
   </footer>
 
 
-
+    <script src="javascript/validarCorreo.js"></script>
     <script src="../javascript/login.js"></script>
     <script src="javascript/funciones.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
