--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -10,10 +10,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
- 
+
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
@@ -64,16 +65,49 @@
   <br>
   <br>
   <br>
-  <br>
-  <br>
 
-  <div class="div_img">
-    <img src="../Imagenes/Trabajadores.png" class="img-fluid" alt="Nosotros" width="1100" height="500">
-    <div class="texto_encima">Nosotros</div>
-  </div>
+
+  <img id="brand" src="../Imagenes/stotoburgerteam.png" alt="brand sotoburguer">
+
+
+  <main class="container-lg d-flex align-items-center justify-content-center">
+
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card text-center">
+          <img src="../Imagenes/Soto_disfrutando.jpg" class="card-img-top" alt="..." width="150" height="550">
+          <div class="card-body">
+            <h5 class="card-title">Don Matias Soto</h5>
+
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card text-center">
+          <img src="../Imagenes/luxo.png" class="card-img-top" alt="..." width="150" height="550">
+          <div class="card-body">
+            <h5 class="card-title">Luis Olavarría</h5>
+
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card text-center">
+          <img src="../Imagenes/alex.png" class="card-img-top" alt="..." width="150" height="550">
+          <div class="card-body">
+            <h5 class="card-title">Alex Barrientos</h5>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </main>
 
   <br>
-  
+  <br>
+  <br>
+  <br>
 
   <main class="container-lg d-flex align-items-center justify-content-center">
 
@@ -102,6 +136,7 @@
     </div>
   </main>
 
+  <br>
   <br>
 
   <footer>
@@ -189,7 +224,7 @@
       <a class="text-reset fw-bold" href="index.html">www.SotoBurguers.com</a>
     </div>
 
-    <a class="ir-arriba"  javascript:void(0) title="Volver arriba">
+    <a class="ir-arriba" javascript:void(0) title="Volver arriba">
       <span class="fa-stack">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-arrow-up fa-stack-1x fa-inverse"></i>
@@ -200,12 +235,12 @@
 
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
-      integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"></script>
+    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 
-    <script src="../javascript/funciones.js"></script>
+  <script src="../javascript/funciones.js"></script>
 </body>
 
 </html>
