--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -17,7 +17,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-  <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
+  <link rel="icon" type="image/x-icon" href="../Imagenes/burger.png" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
 
@@ -75,7 +75,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card text-center">
-          <img src="../Imagenes/Soto_disfrutando.jpg" class="card-img-top" alt="..." width="150" height="550">
+          <img src="../Imagenes/soto7.jpeg" class="card-img-top" alt="..." width="150" height="550">
           <div class="card-body">
             <h5 class="card-title">Don Matias Soto</h5>
 
@@ -84,7 +84,7 @@
       </div>
       <div class="col">
         <div class="card text-center">
-          <img src="../Imagenes/luxo.png" class="card-img-top" alt="..." width="150" height="550">
+          <img src="../Imagenes/luxo.jpeg" class="card-img-top" alt="..." width="150" height="550">
           <div class="card-body">
             <h5 class="card-title">Luis Olavarría</h5>
 
@@ -93,7 +93,7 @@
       </div>
       <div class="col">
         <div class="card text-center">
-          <img src="../Imagenes/alex.png" class="card-img-top" alt="..." width="150" height="550">
+          <img src="../Imagenes/alex.jpeg" class="card-img-top" alt="..." width="150" height="550">
           <div class="card-body">
             <h5 class="card-title">Alex Barrientos</h5>
 
