--- a/html/soporte.html
+++ b/html/soporte.html
@@ -11,7 +11,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
 
-  <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
+  <link rel="icon" type="image/x-icon" href="../Imagenes/burger.png" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -73,7 +73,7 @@
 
 
   <main class="formulario_a d-flex align-items-center justify-content-center">
-    
+
 
     <section>
       <div class="form-group">
